highlight & cover image section added

--- a/index.html
+++ b/index.html
@@ -11,9 +11,25 @@
 </head>
 <body>
     <header>
-        <h1>My API Store</h1>
+        <h2>My API Store</h2>
         <button class="btn">Sign Up</button>
     </header>
+    <main>
+       <!-- highlight Section -->
+        <section id="highlight">
+            <h1>Apple IPhone 13 Pro Max</h1>
+            <p>Discover the Apple iPhone 13 Pro Max: stunning Super Retina XDR display, advanced A15 Bionic chip, Pro camera system, impressive battery life, 5G capability, and sleek design. Experience the ultimate smartphone.</p>
+            <div id="buy-now-button">
+                <button class="btn">Buy Now</button>
+            </div>
+        </section>
+        <!-- Cover Image -->
+         <div class="ci">
+         <section id="cover-image">
+            <img src="./assets/cover.webp" alt="iphone 13 pro max">
+         </section>
+        </div>
+    </main>
     
 </body>
 </html>
