card section added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,54 @@
                 </div>
             </div>
          </section>
+         <!-- card section -->
+          <section id="card-section">
+            <!-- card 1-->
+            <div class="card">
+                <div class="card-image">
+                    <img src="./assets/ci1.png" alt="iphone 13 pro max">
+                </div>
+                <h3 class="card-title">Iphone 13 Pro Max</h3>
+                <p class="card-description">Experience the ultimate performance with iPhone 13 Pro Max's stunning display, advanced camera, and incredible battery life.</p>
+                <div class="card-price">
+                    <span>$</span>
+                    <span>999</span>
+                </div>
+                <div class="card-button">
+                    <button class="btn">Show Details</button>
+                </div>
+            </div>
+            <!-- card 2-->
+            <div class="card">
+                <div class="card-image">
+                    <img src="./assets/ci2.png" alt="iphone 13 pro max">
+                </div>
+                <h3 class="card-title">Iphone 12 Pro Max</h3>
+                <p class="card-description">Sleek design, powerful performance, stunning OLED display, triple camera system, 5G connectivity, long battery life.</p>
+                <div class="card-price">
+                    <span>$</span>
+                    <span>899</span>
+                </div>
+                <div class="card-button">
+                    <button class="btn">Show Details</button>
+                </div>
+            </div>
+            <!-- card 3-->
+            <div class="card">
+                <div class="card-image">
+                    <img src="./assets/ci3.png" alt="iphone 13 pro max">
+                </div>
+                <h3 class="card-title">Iphone 11 Pro </h3>
+                <p class="card-description">Experience unmatched performance with the iPhone 11 Pro. Stunning display, powerful camera, and exceptional battery life.</p>
+                <div class="card-price">
+                    <span>$</span>
+                    <span>799</span>
+                </div>
+                <div class="card-button">
+                    <button class="btn">Show Details</button>
+                </div>
+            </div>
+          </section>
     </main>
     
 </body>
